ans-pup/files/produccion/etc/network/iptables.mangle.rules
# Clasificación de paquetes para QoS basado en HTB y modificación del MSS
# debido a la encapsulación IPSEC.
#	versión 1 - 3-5-2018 (rafa 6).
#
# Proyectos Especiales.
# Gerencia de tecnología.
# Banco Credicoop Coop. Ltdo.    
# Marcas internas de paquetes y manipulación de MSS
#
# ---------------------------------------------------------------
# ----- Marcas internas de paquetes (base de conformación) ------
# ---------------------------------------------------------------
# Tráfico que sortea la Qos (LAN-LAN)
# 100 (decimal) => 0110 0100 (binario) => 0x64 (Hexadecimal)
# FWMARK_LAN=64
# Base de identificación para cada clase.
# FWMARK_VOIP=7
# FWMARK_PRIO=5
# FWMARK_NOPRIO=2
# FWMARK_BULK=1
#
#
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
# Manipulacion de MSS / MTU ===================================================================================
# Por fallas en otros dispositivos, se aplica al total de la red.
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -m tcpmss --mss 1351:1536 -j TCPMSS --set-mss 1350
# LAN local (no usa vínculo).==================================================================================
-A FORWARD -i eth0 -o eth0 -j MARK --set-mark 0x64
-A FORWARD -i peth0 -o peth0 -j MARK --set-mark 0x64
-A FORWARD -i br0 -o br0 -j MARK --set-mark 0x64
#-A INPUT -i eth0 -j MARK --set-mark 0x64
#-A INPUT -i peth0 -j MARK --set-mark 0x64
#-A INPUT -i br0 -j MARK --set-mark 0x64
-A OUTPUT -o eth0 -d 10.10.0.0/15 -j MARK --set-mark 0x64
-A OUTPUT -o eth0 -d 10.12.0.0/15 -j MARK --set-mark 0x64
-A OUTPUT -o eth0 -d 10.20.0.0/14 -j MARK --set-mark 0x64
-A OUTPUT -o peth0 -d 10.10.0.0/15 -j MARK --set-mark 0x64
-A OUTPUT -o peth0 -d 10.12.0.0/15 -j MARK --set-mark 0x64
-A OUTPUT -o peth0 -d 10.20.0.0/14 -j MARK --set-mark 0x64
-A OUTPUT -o br0 -d 10.10.0.0/15 -j MARK --set-mark 0x64
-A OUTPUT -o br0 -d 10.12.0.0/15 -j MARK --set-mark 0x64
-A OUTPUT -o br0 -d 10.20.0.0/14 -j MARK --set-mark 0x64
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -m tcpmss --mss 1351:1536  -m mark ! --mark 0x64 -j TCPMSS --set-mss 1350
# RealTime - VoIP =============================================================================================
# ATAs
-A FORWARD -i eth0 ! -o eth0 -s 10.0.0.168/255.0.0.248 -p udp -j MARK --set-mark 0x07
# HiPrio ======================================================================================================
# SNA,Server (Discontinuo)
# -A FORWARD -i eth0 -s 10.0.0.2/255.0.0.255 -d 10.1.1.0/24 -j MARK --set-mark 0x05
# WEB priorizado
-A OUTPUT -p tcp --dport 3130 -j MARK --set-mark 0x05
-A FORWARD -i eth0 ! -o eth0 -s 10.0.0.252/255.0.0.252 -p tcp --dport 3130 -j MARK --set-mark 0x05
# ACKs
-A OUTPUT -p tcp --tcp-flags ALL ACK -m length --length 0:64 -j MARK --set-mark 0x05
-A FORWARD -i eth0 ! -o eth0 -p tcp --tcp-flags ALL ACK -m length --length 0:64 -j MARK --set-mark 0x05
# LoPrio ======================================================================================================
-A OUTPUT -p tcp --dport 3129 -j MARK --set-mark 0x02
-A FORWARD -i eth0 ! -o eth0 -s 10.0.0.252/255.0.0.252 -p tcp --dport 3129 -j MARK --set-mark 0x02
# Bulk ========================================================================================================
-A OUTPUT -p tcp --dport 3128 -j MARK --set-mark 0x01
-A FORWARD -i eth0 ! -o eth0 -p tcp --dport 3128 -j MARK --set-mark 0x01
-A FORWARD -i eth0 ! -o eth0 -j MARK --set-mark 0x01
-A FORWARD -i br0 ! -o br0 -j MARK --set-mark 0x01
-A FORWARD -i peth0 ! -o peth0 -j MARK --set-mark 0x01
COMMIT
